--- a/res/style.css
+++ b/res/style.css
@@ -121,6 +121,19 @@ input {
 	vertical-align: top;
 }
 
+.abox .mbutton {
+	border-radius: 5px;
+}
+
+.abox .mbutton:first-child {
+	border-top-left-radius: 25px;
+	border-bottom-left-radius: 25px;
+}
+.abox .mbutton:last-child {
+	border-top-right-radius: 25px;
+	border-bottom-right-radius: 25px;
+}
+
 .on, .on .niceinp {
 	background: var(--mark-button-on)!important;
 	color: var(--body-bg)!important;
